Added API to add/remove layers from a project
